[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "-v --cov=app --cov-report=term-missing"
asyncio_mode = "auto"

[metadata]
author = "VIKAS SAHANI"
author_email = "vikassahani17@gmail.com"
description = "FinConnectAI - Financial Connection and Analysis Platform"
long_description = "file: README.md"
long_description_content_type = "text/markdown"
url = "https://github.com/VIKAS9793/FinConnectAI"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project]
name = "finconnectai"
version = "0.1.0"
description = "Financial Connection and Analysis Platform"
authors = [
    { name = "VIKAS SAHANI", email = "vikassahani17@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["finance", "fraud detection", "ai", "machine learning"]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/VIKAS9793/FinConnectAI"
"Bug Tracker" = "https://github.com/VIKAS9793/FinConnectAI/issues"

[tool.poetry]
name = "finconnectai"
version = "0.1.0"
description = "Financial Connection and Analysis Platform"
authors = ["VIKAS SAHANI <vikassahani17@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = "^0.100.0"
pydantic = "^2.5.0"
uvicorn = "^0.25.0"
pytest = "^8.0.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.8.0"
pytest-cov = "^4.1.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
aiohttp = "^3.9.0"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.11.0"
pytest-xdist = "^3.4.0"
pytest-timeout = "^2.2.0"
pytest-benchmark = "^4.0.0"

[tool.poetry.group.doc.dependencies]
Sphinx = "^7.2.0"
sphinx-rtd-theme = "^1.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"

[tool.poetry.scripts]
finconnectai = "app.main:main",
    "Topic :: Office/Business :: Financial",
]

[options]
package_dir = { "" = "." }
packages = find:
python_requires = ">=3.9"

[options.packages.find]
exclude = ["tests*"]

[options.extras_require]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-asyncio>=0.18.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.930",
    "isort>=5.0.0",
    "pre-commit>=2.15.0",
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]
